--- a/src/components/Signup.css
+++ b/src/components/Signup.css
@@ -3,18 +3,20 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
+.body{
+    width: 100%;
     min-height: 100vh;
+    padding: 50px 4.5%;
     display: flex;
     align-items: center;
     justify-content: center;      
     background: rgba(5, 117, 229, 255);
-
 }
 .container{
     width: 900px;
+    max-width: 100%;
     border-radius: 10px;
-    padding: 30px;
+    padding: 25px;
     background-color: #fff;
     display: flex;
     flex-direction: column;
@@ -22,41 +24,34 @@ body{
 }
 .container .header{
     font-size: 32px;
-    font-weight: 600;
+    font-weight: 700;
     text-align: center;
-    color: #333;
-
-}
-.container .header::before{
-   content: "";
-   position: absolute;
-   bottom: -2px;
-   height: 3px;
-   width: 27px;
-   background-color: rgba(5, 117, 229, 255);
+    color: rgba(5, 117, 229, 255);
 
 }
 .container form{
-    position: relative;
     width: 100%;
-}
-.container form .fields{
     display: flex;
-    gap: 10px;
-    width: 100%;
     flex-wrap: wrap;
+    gap: 10px;
 }
-.names-field{
-    /* width: calc((100% / 3)-(10px - (10px / 3))); */
-    width: calc(100% / 3 -1px);
+.three-field{
+    width: calc((100% / 3) - (10px - (10px / 3)));
 }
 .full-input{
     width: 100%;
 }
 
+.half-field{
+
+    width: calc(50% - 5px);
+
+}
+
 .container .fields .input-field{
     display: flex;
     flex-direction: column;
+    gap: 5px;
 }
 .input-field label{
     font-size: 16px;
@@ -64,37 +59,57 @@ body{
     color: #2e2e2e;
 }
 .input-field input {
+    width: 100%;
+    height: 40px;
+    padding: 0px 10px;
     outline: none;
     font-size: 16px;
-    font-weight: 400;
-    height: 49px;
-    padding: 22px 7px;
+    font-weight: 500;
     color: black;
     border:solid 1px #5c5a5a;
     color: #595858;
-    outline: none;
-    font-size: 19px;
     border-radius: 6px;
 }
 .submit{
+    width: 100%;
+    padding: 10px 20px;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 399px;
-    height: 49px;
-    margin-left: 13rem;
     color: #fff;
     background: rgba(5, 117, 229, 220);
-    border-radius: 13px;
-    font-weight: 300;
-    font-size: 21px;
+    border-radius: 10px;
+    font-weight: 500;
+    font-size: 16px;
     cursor: pointer;
- }
- .submit-container{
-    text-align: center;
-   justify-content: center;
- }
- 
- .submit-container a{
-     color: rgba(5, 117, 229, 255);
- }
+}
+.submit-container{
+    width: 100%;
+}
+.submit-container p{
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+
+}
+.submit-container a{
+    color: rgba(5, 117, 229, 255);
+}
+
+@media only screen and (max-width: 570px){
+
+    .container{
+
+        padding: 20px 4.5%;
+
+    }
+
+    .three-field, .half-field{
+
+        width: 100%;
+
+    }
+
+}
