--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 @import "tailwindcss";
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+}
+
+:root{
+    --red-color: #ff0000;
+    --blue-color: #305FA2;
+    --gray-color: #adb5bd;
+    --salt-color: #F7F8FA;
+    --black-color: #2D2D2D;
+    --white-color: #FFFFFF;
+    --green-color: #70e000;
+    --yellow-color: #E1B96D;
+    --gray-color-1: #dee2e6;
+    --gray-color-2: #6c757d;
+    --gray-color-3: #e9ecef;
+    --black-color-2: #383838;
+
+    --red-opacity-color: rgba(255, 0, 0, 0.1);
+    --blue-opacity-color: rgba(48, 95, 162, 0.9);
+    --green-opacity-color: rgba(112, 224, 0, 0.1);
+    --blue-opacity-color-2: rgba(48, 95, 162, 0.75);
+    --yellow-opacity-color: rgba(225, 185, 109, 0.1);
+    --white-opacity-color: rgba(255, 255, 255, 0.75);
+    --gray-opacity-color-3: rgba(233, 236, 239, 0.5);
+    --black-opacity-color: rgba(45, 45, 45, 0.95);
+}
+
+html{
+    font-family: "Manrope", sans-serif;
+}
