--- a/src/Authentication/auth.module.css
+++ b/src/Authentication/auth.module.css
@@ -69,7 +69,8 @@
 
 .input_field input {
     width: 100%;
-    padding: 10px;
+    height: 40px;
+    padding: 0px 10px;
     outline: none;
     font-size: 16px;
     color: var(--black-color);
@@ -85,6 +86,11 @@
         color: var(--gray-color-2);
     }
 }
+
+.pass_input{
+    padding-right: 38px !important;
+}
+
 .forget{
     width: 100%;
     display: flex;
@@ -132,6 +138,26 @@
     color: var(--blue-color);
 }
 
+.relative {
+    position: relative;
+}
+
+.eye_container{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 38px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.iconEyes {
+    font-size: 18px;
+    cursor: pointer;
+}
+
 @media only screen and (max-width: 570px){
 
     .container{
@@ -142,14 +168,4 @@
         width: 100%;
     }
 
-}
-.relative{
-    position: relative;
-}
-.iconEyes{
-    position: absolute;
-    right: 1rem;
-    font-size: 18px;
-    cursor: pointer;
-    top: 30%;
 }
