--- a/src/Components/Header/header.module.css
+++ b/src/Components/Header/header.module.css
@@ -1,8 +1,14 @@
 .header{
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
-    padding: 16px 0px 10px;
+    padding: 20px 4.5%;
+    transition: 0.3s;
+}
 
-
+.header_scroll{
+    padding: 0 !important;
 }
 
 .navbar{
@@ -11,11 +17,17 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    padding: 20px 2.25% ;
+    padding: 20px 4.5% ;
     margin: auto;
     background-color: var(--white-color);
-    box-shadow: 0px 0px 11px var(--black-opacity-color-1);
+    box-shadow: 0px 0px 10px var(--black-opacity-color-1);
+    transition: 0.3s;
 
+}
+
+.navbar_scroll{
+    border-radius: 0;
+    box-shadow: 0px 10px 10px var(--black-opacity-color-1);
 }
 
 .logo{
@@ -110,11 +122,11 @@
 
     .links{
         position: fixed;
-        width: 95.5%;
+        width: 91%;
         height: calc(100vh - 150px);
         top: 110px;
-        left: 2.25%;
-        padding: 20px 2.25%;
+        left: 4.5%;
+        padding: 20px 4.5%;
         flex-direction: column;
         gap: 25px;
         border-radius: 10px;
@@ -123,6 +135,16 @@
         transition: ease .3s;          
         background-color: var(--white-color);
         box-shadow: 0px 0px 10px var(--black-opacity-color-1);
+        z-index: 150;
+    }
+
+    .links_scroll{
+        left: 0;
+        width: 100%;
+        height: calc(100vh - 89px);
+        border-radius: 0px;
+        box-shadow: none;
+        border-top: 1px solid var(--gray-color-3);
     }
 
     .links li{
@@ -135,14 +157,20 @@
     }
 
     .account{
-        padding: 0px 20px;
+        padding: 0px 4.5%;
         position: fixed;
-        width: 95.5%;
-        left: 2.25%;
+        width: 91%;
+        left: 4.5%;
         bottom: 60px;
         opacity: 0;
         visibility: hidden;
         justify-content: center;
+        z-index: 150;
+    }
+
+    .account_scroll{
+        left: 0;
+        width: 100%;
     }
 
     .account a{
@@ -154,6 +182,13 @@
         opacity: 1;
         visibility: visible;
     }
+
+    #links.active_scroll{
+        top: 89px;
+        opacity: 1;
+        visibility: visible;
+    }
+
     .account.active_auth{
         bottom: 40px;
         opacity: 1;
