Add React-Router-Dom & Edit F&Q Section

--- a/src/Components/Header/header.module.css
+++ b/src/Components/Header/header.module.css
@@ -59,10 +59,10 @@
     }
 }
 
-.active_li{
+/* .active_li{
     color: var(--blue-color) !important;
     background-color: var(--gray-color-3);
-}
+} */
 
 
 .account{
