--- a/src/Components/Footer/footer.module.css
+++ b/src/Components/Footer/footer.module.css
@@ -1,6 +1,6 @@
 .footer {
-    background-color: #141c2f;
-    color: #ffffff;
+    background-color: var(--blue-color);
+    color: var(--salt-color);
     padding: 40px 60px 20px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
       "Helvetica Neue", sans-serif;
