--- a/src/Components/Footer/footer.module.css
+++ b/src/Components/Footer/footer.module.css
@@ -1,5 +1,6 @@
 .footer {
     background-color: var(--blue-color);
+    background-color: var(--);
     color: var(--salt-color);
     padding: 40px 60px 20px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
