--- a/src/Pages/Home/home.module.css
+++ b/src/Pages/Home/home.module.css
@@ -2,20 +2,26 @@
 
 .container {
   width: 100%;
+  min-height: 100svh;
   padding: 50px 4.5%;
-  padding-top: 180px;
+  padding-top: 150px;
   display: flex;
   flex-direction: column;
-  gap: 50px;
-  background-color: var(--salt-color);
+  align-items: center;
+  justify-content: center;
+  gap: 25px;
+  background-image: linear-gradient(to bottom right, var(--blue-opacity-color), var(--blue-opacity-color)),
+    url("../../assets/Images/auth_bg.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
-
-/* Vehicle Status Checker styles */
 
 .header_cont{
   width: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 25px;
 }
 
@@ -26,12 +32,12 @@
 .title {
   font-size: 3rem;
   font-weight: 700;
-  color: var(--black-color);
+  color: var(--salt-color);
 }
 
 .description {
   font-size: 1rem;
-  color: var(--gray-color-2);
+  color: var(--gray-color-1);
 }
 
 .buttonContainer {
@@ -47,34 +53,36 @@
   justify-content: center;
   gap: 10px;
   border-radius: 4px;
-  padding: 10px 20px;
+  padding: 20px;
   font-size: 1rem;
-  font-weight: 500;
+  font-weight: 700;
   cursor: pointer;
   transition: 0.3s;
 }
 
 .buttonContainer button svg{
-  font-size: 1.25rem;
+  font-size: 1.5rem;
 }
 
 .primaryButton {
   color: var(--salt-color);
-  border: none;
-  background-color: var(--blue-color);
+  border: 2px solid var(--salt-color);
+  background-color: transparent;
 }
 
 .outlineButton {
   background-color: var(--salt-color);
   color: var(--blue-color);
-  border: 1px solid var(--blue-color);
+  border: 2px solid var(--salt-color);
 }
 
 /* Statistics Dashboard styles */
 
 .statsGrid {
+  width: 768px;
+  margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 15px;
 }
 
@@ -120,7 +128,7 @@
 
 .infoBox {
   width: fit-content;
-  margin: auto;
+  margin: 0 auto;
   background-color: var(--white-color);
   border-radius: 5px;
   padding: 20px;
@@ -139,7 +147,7 @@
 .infoText {
   font-size: 0.875rem;
   color: var(--gray-color-2);
-  max-width: 500px;
+  max-width: 768px;
 }
 
 /* FAQ styles */
@@ -150,6 +158,7 @@
   display: flex;
   flex-direction: column;
   gap: 50px;
+  background-color: var(--white-color);
 }
 
 .sec_title{
@@ -216,7 +225,13 @@
   }
 }
 
-@media (max-width: 620px) {
+@media (max-width: 860px) {
+  .statsGrid {
+    width: 100%;
+  }
+}
+
+@media (max-width: 670px) {
   .title {
     font-size: 2.5rem;
   }
@@ -226,6 +241,7 @@
   }
 
   .buttonContainer {
+    width: 100%;
     flex-direction: column;
   }
 
@@ -234,6 +250,7 @@
   }
 
   .statsGrid {
+    width: 100%;
     grid-template-columns: 1fr;
   }
 }
